human_written_tests/WebAssembly/processed_control_flow_validation/test_if_12.wast
(assert_invalid
  (module
    (type $sig (func))
    (func (i32.const 1) (if (type $sig) (i32.const 0) (then)))
  )
  "type mismatch"
)